--- a/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
+++ b/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāga­takāyavakcittakṛṣna­yamārināmatantra</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-083-015"/>
                 <date/>
             </publicationStmt>
@@ -31,10 +31,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-06T14:25:15.967Z" user="admin">06/08/2021 14:25:15</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:14:01.87Z" user="admin">30/06/2022 13:14:01</note>
 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
     <note type="updated" update="translation-status" value="4" date-time="2021-08-06T14:25:10.944Z" user="line-tofte">4</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-06T14:25:10.944Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:13:36.277Z" user="line-tofte"/>
+    <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-16T13:13:36.277Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:13:56.02Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-30T13:13:56.02Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
