--- a/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
+++ b/translations/kangyur/placeholders/083-015_toh467-the_tantra_of_black_yamari.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed nag po'i rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">kṛṣnayamāritantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Black Yamāri</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi sku gsung thugs gshin rje gshed nag po zhes bya ba'i rgyud/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">kṛṣnayamāritantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje gshed nag po'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāga­takāyavakcittakṛṣna­yamārināmatantra</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi sku gsung thugs gshin rje gshed nag po zhes bya ba'i rgyud/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -31,12 +33,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:14:01.87Z" user="admin">30/06/2022 13:14:01</note>
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-06T14:25:10.944Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-06T14:25:10.944Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:13:36.277Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-16T13:13:36.277Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:13:56.02Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-30T13:13:56.02Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:14:36.612Z" user="admin">30/06/2022 13:14:36</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="4" date-time="2021-08-06T14:25:10.944Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-08-06T14:25:10.944Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:13:36.277Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-16T13:13:36.277Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:13:56.02Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-30T13:13:56.02Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-06-30T13:14:28.686Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
