--- a/translations/kangyur/placeholders/083-021_toh473-the_cycle_accomplishing_all_the_actions_of_black_yamari_a_sovereign_tantra.xml
+++ b/translations/kangyur/placeholders/083-021_toh473-the_cycle_accomplishing_all_the_actions_of_black_yamari_a_sovereign_tantra.xml
@@ -10,8 +10,13 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">gshin rje'i gshed dgra nag po'i 'khor lo las thams cad grub par byed pa zhes bya ba'i rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">yamārikṛṣṇakarmasarvacakra­siddhikaranāmatantrarāja</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2022</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-083-021"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh473" type="text">
@@ -25,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:34:46 by admin</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:16:43.338Z" user="admin">30/06/2022 13:16:43</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:16:37.379Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:16:37.379Z" user="line-tofte">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
