--- a/translations/kangyur/placeholders/083-021_toh473-the_cycle_accomplishing_all_the_actions_of_black_yamari_a_sovereign_tantra.xml
+++ b/translations/kangyur/placeholders/083-021_toh473-the_cycle_accomplishing_all_the_actions_of_black_yamari_a_sovereign_tantra.xml
@@ -4,14 +4,16 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje'i gshed nag po'i las thams cad grub par byed pa 'khor lo'i rgyud kyi rgyal po/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">yamārikṛṣṇakarmasarva­cakrasiddhikara</title>
                 <title type="mainTitle" xml:lang="en">The Cycle Accomplishing All the Actions of Black Yamāri, a Sovereign Tantra</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">gshin rje'i gshed dgra nag po'i 'khor lo las thams cad grub par byed pa zhes bya ba'i rgyud kyi rgyal po/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">yamārikṛṣṇakarmasarva­cakrasiddhikara</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gshin rje'i gshed nag po'i las thams cad grub par byed pa 'khor lo'i rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">yamārikṛṣṇakarmasarvacakra­siddhikaranāmatantrarāja</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">gshin rje'i gshed dgra nag po'i 'khor lo las thams cad grub par byed pa zhes bya ba'i rgyud kyi rgyal po/</title>
+                <author role="translatorMain" ref="eft:team-55"/>
+                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2022</date>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -30,7 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:16:43.338Z" user="admin">30/06/2022 13:16:43</note>    <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:16:37.379Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:16:37.379Z" user="line-tofte">0.0.1</note>
+                <note type="lastUpdated" date-time="2022-06-30T13:17:33.633Z" user="admin">30/06/2022 13:17:33</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:16:37.379Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2022-06-30T13:16:37.379Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:17:25.764Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
