--- a/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
+++ b/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
@@ -28,10 +28,10 @@
         <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.5 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -80,7 +80,7 @@
 
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-10T16:11:14.568Z" user="admin">10/06/2022 16:11:14</note>
+        <note type="lastUpdated" date-time="2022-07-04T06:45:37.629Z" user="admin">04/07/2022 06:45:37</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-05-04T08:26:35.216Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-04T08:26:35.216Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-04T08:27:00.524Z" user="line-tofte">Auto (update-contributors)</note>
@@ -120,6 +120,9 @@
         <note type="updated" update="text-version" value="1.0.0" date-time="2022-05-10T05:14:48.405Z" user="sameer">First published version</note>
         <note type="updated" update="text-version" value="1.0.1" date-time="2022-05-17T18:09:14.045Z" user="martina-cotter">Updated pending links, and bibliography entry.</note>
         <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-03T14:30:07.658Z" user="celso">Activated pending links and added bibl</note>
+          <note type="updated" update="text-version" value="1.0.4" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+          <note type="updated" update="translation-status" value="1" date-time="2022-07-04T06:45:29.788Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.5" date-time="2022-07-04T06:45:29.788Z" user="sameer">Auto (update-publication-status)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
