--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -31,10 +31,10 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 0.0.03 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="2">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -65,7 +65,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-07-04T09:57:52.829Z" user="admin">04/07/2022 09:57:52</note>
+        <note type="lastUpdated" date-time="2022-07-04T10:00:54.71Z" user="admin">04/07/2022 10:00:54</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">Auto
@@ -107,6 +107,8 @@
           <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-28T06:04:59.879Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="translation-status" value="1.a" date-time="2022-07-04T09:57:45.104Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-04T09:57:45.104Z" user="sameer">First published version</note>
+          <note type="updated" update="translation-status" value="2" date-time="2022-07-04T10:00:46.847Z" user="sameer">2</note>
+          <note type="updated" update="text-version" value="0.0.03" date-time="2022-07-04T10:00:46.847Z" user="sameer">0.0.03</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
