--- a/translations/kangyur/placeholders/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
@@ -12,10 +12,10 @@
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-036-009"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-10T16:23:27.206Z" user="admin">10/06/2022 16:23:27</note>
+                <note type="lastUpdated" date-time="2022-07-04T13:23:10.653Z" user="admin">04/07/2022 13:23:10</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:39.295Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:18:35.836Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-01-06T13:07:38.914Z" user="line-tofte">Auto (update-contributors)</note>
@@ -39,6 +39,8 @@
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-01-06T13:08:38.554Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-02-28T12:41:29.72Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-02-28T12:41:29.72Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2022-07-04T13:23:03.026Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-04T13:23:03.026Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
