--- a/translations/kangyur/placeholders/003-009_toh1-14-chapter_14_on_suspending_the_restoration_rites.xml
+++ b/translations/kangyur/placeholders/003-009_toh1-14-chapter_14_on_suspending_the_restoration_rites.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" ref="eft:person-384">Ven. Gyalten Jigdrel</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2021</date>
+                <edition>v 0.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-003-009"/>
                 <date/>
             </publicationStmt>
@@ -31,7 +31,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-19T16:36:30.301Z" user="admin">19/11/2021 16:36:30</note>
+                <note type="lastUpdated" date-time="2022-07-04T13:50:45.75Z" user="admin">04/07/2022 13:50:45</note>
     <note type="updated" update="translation-status" value="4" date-time="2021-11-04T10:04:37.018Z" user="line-tofte">4</note>
 
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-11-04T10:04:37.018Z" user="line-tofte">0.0.1</note>
@@ -43,6 +43,8 @@
     <note type="updated" update="text-version" value="0.0.3" date-time="2021-11-19T16:35:28.107Z" user="line-tofte">Auto (update-contributors)</note>
 
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-11-19T16:36:19.148Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="translation-status" value="2.h" date-time="2022-07-04T13:50:37.735Z" user="line-tofte">2.h</note>
+    <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-04T13:50:37.735Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
