--- a/translations/kangyur/placeholders/056-008_toh140,525,914-the_incantation_for_achieving_the_boundless_gate.xml
+++ b/translations/kangyur/placeholders/056-008_toh140,525,914-the_incantation_for_achieving_the_boundless_gate.xml
@@ -4,21 +4,21 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sgo mtha' yas pa sgrub pa'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">anantamukhasādhakadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Achieving the Boundless Gate</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pa sgrub pa zhes bya ba'i gzungs</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryānantamukhasādhakanāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">sgo mtha' yas pas bsgrub pa'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">anantamukhasādhakadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sgo mtha' yas pa sgrub pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī that Leads to Realization Via the Infinite Gate</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pas bsgrub pa zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryānantamukhasādhakanāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">sgo mtha' yas pas sgrub pa'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pas sgrub pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryānantamukhasādhākanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">āryānantamukhasādhakanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pas sgrub pa zhes bya ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">sgo mtha' yas pas sgrub pa'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pas bsgrub pa zhes bya ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pa sgrub pa zhes bya ba'i gzungs</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">sgo mtha' yas pas bsgrub pa'i gzungs/</title>
+                <author role="translatorMain" ref="eft:team-84"/>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2021</date>
+                <edition>v 0.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -55,13 +55,16 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-07T08:16:52.247Z" user="admin">07/07/2022 08:16:52</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:08:20.545Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-09-16T13:08:20.545Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-09-16T13:11:06.533Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-16T13:11:06.533Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-07T08:17:59.852Z" user="admin">07/07/2022 08:17:59</note>
+                <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">0.0.1</note>
+                <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:08:20.545Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-09-16T13:08:20.545Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="4" date-time="2021-09-16T13:11:06.533Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-16T13:11:06.533Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-07T08:17:52.127Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
