--- a/translations/kangyur/placeholders/064-002_toh232-the_great_cloud_sutra.xml
+++ b/translations/kangyur/placeholders/064-002_toh232-the_great_cloud_sutra.xml
@@ -16,10 +16,11 @@
                 <consultant role="projectManager" ref="eft:person-214">Joshua Capitanio</consultant>
                 <editor role="projectEditor" ref="eft:person-262">David Higgins</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2019</date>
+                <edition>v 0.0.12 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -39,18 +40,25 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-07T09:22:54.597Z" user="admin">07/07/2022 09:22:54</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-07T09:23:35.408Z" user="admin">07/07/2022 09:23:35</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2021-05-05T09:44:03.681Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-05T09:44:03.681Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2021-05-05T09:44:26.683Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-05-05T09:44:46.558Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-16T12:00:22.668Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.f" date-time="2021-09-28T06:59:47.913Z" user="line-tofte">2.f</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-28T06:59:47.913Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-03-23T14:04:15.514Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-03-23T14:04:15.514Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-03-23T14:04:41.846Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-05-19T10:00:47.73Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-19T10:00:47.73Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.b" date-time="2022-07-07T09:22:46.986Z" user="line-tofte">2.b</note>    <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-07T09:22:46.986Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-16T12:00:22.668Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2021-09-28T06:59:47.913Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-28T06:59:47.913Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-03-23T14:04:15.514Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-03-23T14:04:15.514Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2022-03-23T14:04:41.846Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-05-19T10:00:47.73Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-05-19T10:00:47.73Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2022-07-07T09:22:46.986Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-07T09:22:46.986Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2022-07-07T09:23:27.798Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
